[1.0.13] fix the background color for hidden/collapse generative AI layer

--- a/google-gruvbox.user.css
+++ b/google-gruvbox.user.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name           google gruvbox ( marslo )
-@version        1.0.12
+@version        1.0.13
 @namespace      github.com/marslo
 @description    Gruvbox dark theme for google search and translate. inhered from: https://github.com/touhidulshawan/gruvbox-google
 @preprocessor   stylus
@@ -280,6 +280,11 @@
 
   .oTiGzc, .yQLaje
     font-family: var(--font-family-mono) !important;
+
+  .RDmXvc
+    background-image: linear-gradient(transparent 0px,rgba(42,43,45,0.9) 52px,#282828 80px)
+  .zNsLfb
+    background-color: transparent !important;
 
 
 @-moz-document url-prefix("https://translate.google.")
